--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dacite==1.6.0
 idna==3.3
 mypy-extensions==0.4.3
 pathspec==0.9.0
+Pillow==9.2.0
 platformdirs==2.5.2
 pokemontcgsdk==3.4.0
 requests==2.28.1
@@ -14,4 +15,5 @@ six==1.16.0
 SLPP==1.2.3
 tomli==2.0.1
 typing_extensions==4.3.0
+Unidecode==1.3.4
 urllib3==1.26.11
